--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,116 @@ html, body, #root, .App, .game {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+	font-family: sans-serif;
+	user-select: none;
 }
 
 .game {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 30px;
 	background-color: var(--background);
 }
 
-/*table { border-collapse: collapse; font-family: Calibri, sans-serif; }
-colgroup, tbody { border: solid medium; }
-td { border: solid thin; height: 1.4em; width: 1.4em; text-align: center; padding: 0; }*/
+.controls {
+	display: grid;
+	grid-template-rows: 50px auto fit-content;
+	grid-template-areas: 
+		"new-game"
+		"buttons"
+		"numpad";
+	height: 500px;
+	gap: 20px;
+	padding-left: 30px;
+}
+
+.new-game-button {
+	grid-area: new-game;
+	display: flex;
+	background-color: #4b7bec;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	border-radius: 10px;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.new-game-button:hover {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+}
+
+.edit__buttons {
+	grid-area: buttons;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.edit-buttons__button {
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	color: #75747c;
+	/*border: solid 1px #75747c;*/
+	background-color: #25242c;
+	border-radius: 10px;
+	width: 60px;
+	height: 60px;
+	gap: 5px;
+	cursor: pointer;
+}
+
+.edit-buttons__button.highlight {
+	color: #4b7bec;
+}
+
+.edit-buttons__button.yellow {
+	color: #fed330;
+}
+
+.edit-buttons__button:hover {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+}
+
+.edit-buttons__button__icon {
+	font-size: 22px;
+}
+
+.numpad {
+	grid-area: numpad;
+	display: grid;
+	grid-template-columns: repeat(3, auto);
+	grid-template-rows: repeat(3, auto);
+	gap: 0 10px;
+}
+
+.numpad__button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #25242c;
+	width: 100px;
+	height: 100px;
+	color: #4b7bec;
+	font-size: 40px;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.numpad__button:hover {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+}
+
+.numpad__button.hidden {
+	background-color: transparent;
+	border: solid 1px #25242c;
+	width: 98px;
+	height: 98px;
+	cursor: default;
+}
+
+.numpad__button.hidden:hover {
+	background-image: none;
+}
