--- a/src/index.css
+++ b/src/index.css
@@ -40,23 +40,29 @@ body {
 
 .navbar {
 	display: grid;
-	grid-template-columns: fit-content(0) auto fit-content(0);
-	grid-template-areas: "logo title user";
+	grid-template-columns: 0 fit-content(0) auto fit-content(0) 0;
+	grid-template-areas: "menu logo title user new-game";
+	padding: 5px 10px;
 	align-items: center;
-	padding: 10px;
 	color: white;
 }
 
-.navbar__logo-wrapper img {
+.menu-icon-wrapper {
+	grid-area: menu;
+	display: none;
+}
+
+.navbar__logo-wrapper {
 	grid-area: logo;
+	padding-right: 20px;
+}
+
+.navbar__logo-wrapper img {
 	height: 22px;
 }
 
 .navbar__title {
 	grid-area: title;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	font-size: 30px;
 }
 
@@ -84,6 +90,12 @@ body {
 	white-space: nowrap;
 	font-size: 20px;
 	color: white;
+	width: fit-content;
+}
+
+#navbar-new-game-button {
+	grid-area: new-game;
+	display: none;
 }
 
 #sudoku {
@@ -94,24 +106,34 @@ body {
 
 .game {
 	display: grid;
-	grid-template-columns: 504px 320px;
-	grid-template-rows: 50px fit-content(0) fit-content(0) auto fit-content(0);
+	grid-template-columns: fit-content(0) 20px 287px;
+	grid-template-rows: 40px 20px fit-content(0) 5px fit-content(0) 20px fit-content(0);
 	grid-template-areas:
-		"sudoku new-game"
-		"sudoku buttons"
-		"sudoku numpad";
-	gap: 20px;
+		"sudoku a new-game"
+		"sudoku b c"
+		"sudoku d buttons"
+		"sudoku e f"
+		"sudoku g extra"
+		"sudoku h i"
+		"sudoku j numpad";
 	width: fit-content;
 	height: fit-content;
 }
 
 .sudoku {
 	grid-area: sudoku;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .new-game-wrapper {
 	grid-area: new-game;
 	position: relative;
+}
+
+.new-game-wrapper.absolute {
+	position: inherit;
 }
 
 .new-game-button {
@@ -124,6 +146,12 @@ body {
 	font-size: 20px;
 	cursor: pointer;
 	height: 100%;
+}
+
+.new-game-button.ghost {
+	width: fit-content;
+	background-color: transparent;
+	color: #2586e7;
 }
 
 .new-game-button:hover {
@@ -139,12 +167,13 @@ body {
 	position: absolute;
 	flex-flow: column;
 	background-color: #25242c;
-	width: 320px;
+	width: 287px;
 	left: 50%;
 	transform: translateX(-50%);
 	margin-top: 10px;
 	border-radius: 15px;
 	border: solid 1px white;
+	box-sizing: border-box;
 }
 
 .menu-button {
@@ -174,22 +203,29 @@ body {
 .edit__buttons {
 	grid-area: buttons;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
+	gap: 5px;
+}
+
+.extra__buttons {
+	grid-area: extra;
+	display: flex;
+	align-items: center;
+	gap: 5px;
 }
 
 .edit-buttons__button {
 	display: flex;
-	flex-flow: column;
+	/*flex-flow: column;*/
 	justify-content: center;
 	align-items: center;
 	color: #75747c;
 	/*border: solid 1px #75747c;*/
 	background-color: #25242c;
 	border-radius: 10px;
-	width: 60px;
-	height: 60px;
-	gap: 5px;
+	width: 67px;
+	height: 67px;
+	/*gap: 5px;*/
 	cursor: pointer;
 }
 
@@ -206,7 +242,7 @@ body {
 }
 
 .edit-buttons__button__icon {
-	font-size: 22px;
+	font-size: 30px;
 }
 
 .numpad {
@@ -214,20 +250,23 @@ body {
 	display: grid;
 	grid-template-columns: repeat(3, auto);
 	grid-template-rows: repeat(3, auto);
-	gap: 10px 10px;
+	gap: 10px;
 }
 
 .numpad__button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #25242c;
-	width: 100px;
-	height: 100px;
+	width: 86.33px;
+	height: 86.33px;
 	color: #4b7bec;
 	font-size: 40px;
 	border-radius: 10px;
 	cursor: pointer;
+}
+
+.numpad__button.number {
+	background-color: #25242c;
 }
 
 .numpad__button:hover {
@@ -236,6 +275,8 @@ body {
 
 .numpad__button.hidden {
 	background-color: transparent;
+	width: 84.33px;
+	height: 84.33px;
 	border: solid 1px #25242c;
 	cursor: default;
 }
@@ -244,34 +285,136 @@ body {
 	background-image: none;
 }
 
+#settings {
+	width: 600px;
+	padding-top: 40px;
+}
+
+.settings__list {
+	display: flex;
+	flex-flow: column;
+	padding: 10px;
+}
+
+.settings__item {
+	display: grid;
+	grid-template-columns: auto fit-content(0);
+	padding: 15px 25px;
+	background-color: #25242c;
+	border-color: black;
+	border-width: 1px 1px 0px 1px;
+	border-style: solid;
+}
+
+.settings__item:first-child {
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.settings__item:last-child {
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-width: 1px 1px 1px 1px;
+}
+
+.settings__item__title {
+	color: white;
+	font-size: 20px;
+	margin-right: 40px;
+}
+
 @media only screen and (max-width: 880px) {
+	.section {
+		width: 100%;
+	}
+
 	.game {
-		grid-template-columns: fit-content(0) auto !important;
-		grid-template-rows: 50px fit-content(0) auto !important;
+		grid-template-columns: 1fr 3fr !important;
+		grid-template-rows: fit-content(0) 1fr 3.3fr !important;
 		grid-template-areas:
-			"new-game new-game"
 			"sudoku sudoku"
-			"buttons numpad" !important;
-		gap: 20px;
-		padding: 10px;
+			"buttons buttons"
+			"extra numpad" !important;
+		gap: 10px;
+		width: 100%;
+		height: calc(100%-20px);
+	}
+
+	#large-new-game-button {
+		display: none;
 	}
 
 	#sudoku {
 		align-items: flex-start;
+		width: calc(100% - 6px);
+		padding-left: 3px;
 	}
 
 	.edit__buttons {
-		flex-wrap: wrap;
-		width: 140px;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
 		gap: 10px;
+		padding: 0 10px;
+	}
+
+	.extra__buttons {
+		display: grid;
+		grid-template-rows: 1fr 1fr 1fr;
+		gap: 10px;
+		padding-left: 10px;
+	}
+
+	.edit-buttons__button {
+		width: 100%;
+		height: 100%;
+	}
+
+	.numpad {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+		padding-right: 10px;
 	}
 
 	.numpad__button {
-		height: auto;
 		width: auto;
+		height: auto;
+	}
+
+	.numpad__button.hidden {
+		width: auto;
+		height: auto;
 	}
 
 	.new-game-menu.visible {
-		width: 100%;
+		width: calc(100% - 6px);
+	}
+
+	.menu-icon-wrapper {
+		display: block;
+		padding-right: 20px;
+		font-size: 25px;
+		cursor: pointer;
+	}
+
+	.navbar {
+		grid-template-columns: fit-content(0) 0 auto 0 114px !important;
+	}
+
+	.navbar__logo-wrapper {
+		display: none;
+	}
+
+	.navbar__user-wrapper {
+		display: none;
+	}
+
+	#navbar-new-game-button {
+		display: block;
+		height: 30px;
+	}
+
+	#settings {
+		width: auto;
 	}
 }
