--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,11 @@
 	--focus: #163c7b;
 }
 
-html, body, #root, .game {
+html, body, #root, .app {
 	margin: 0;
 	width: 100%;
 	height: 100%;
 	font-family: sans-serif;
-	user-select: none;
 	user-select: none;
 	touch-action: manipulation;
 }
@@ -18,13 +17,10 @@ a {
 	text-decoration: none;
 }
 
-body {
-	background-color: var(--background);
-}
-
-#root {
+.app {
 	display: flex;
 	justify-content: center;
+	background-color: var(--background);
 }
 
 .section {
@@ -322,6 +318,14 @@ body {
 	background-color: transparent;
 }
 
+.numpad__button.locked {
+	border: 1px solid white;
+	width: 84.33px;
+	height: 84.33px;
+	color: white;
+	/*background-color: transparent;*/
+}
+
 #settings {
 	width: 600px;
 	padding-top: 40px;
@@ -424,8 +428,13 @@ body {
 		height: auto;
 	}
 
+	.numpad__button.locked {
+		width: auto;
+		height: auto;
+	}
+	
 	.new-game-menu.visible {
-		width: calc(100% - 6px);
+		width: 100%;
 	}
 
 	.menu-icon-wrapper {
