--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ html, body, #root {
 	touch-action: manipulation;
 }
 
+body {
+	position: fixed;
+	user-select: none;
+}
+
 a {
 	text-decoration: none;
 }
