--- a/src/components/actionSheet/actionSheet.css
+++ b/src/components/actionSheet/actionSheet.css
@@ -1,7 +1,17 @@
+.action-sheet__wrapper {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: calc(100vw - 20px);
+  max-width: 450px;
+}
+
 .action-sheet__list {
   display: flex;
   flex-flow: column;
   margin-bottom: 10px;
+  width: 100%;
+  max-width: 450px;
 }
 
 .action-sheet__list__title {
@@ -13,3 +23,4 @@
   padding: 10px;
   text-align: center;
 }
+
