--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,18 @@
   --red: #fc5c65;
   --green: #26de81;
   --blue: #4b7bec;
-  --lightGray: #e4e7ed;
+  --lightGray: #dce0e6 /*#e4e7ed*/;
   --darkGrayBlue: #344861;
-  --darkBackground: #1c1c1e;
 }
 
 [data-theme='light'] {
-  --background: #f9fafb;
+  --background: #f2f1f6;
+  --darkBackground: white;
   --primaryTextColor: var(--darkGrayBlue);
   --secondaryTextColor: #9e9e9e;
   --loginButtonBorderColor: var(--darkGrayBlue);
-  --topbarBackgroundColor: white;
   --topbarFontColor: var(--darkGrayBlue);
-  --bookmarkOffColor: var(--lightGray);
+  --bookmarkOffColor: var(--darkGrayBlue);
   --bookmarkOnColor: var(--blue);
   --actionSheetButtonBackground: #eeeef0;
   --actionSheetCancelBackground: white;
@@ -53,10 +52,10 @@
 
 [data-theme='dark'] {
   --background: black;
+  --darkBackground: #1c1c1e;
   --primaryTextColor: white;
   --secondaryTextColor: #e0e0e0;
   --loginButtonBorderColor: white;
-  --topbarBackgroundColor: transparent;
   --topbarFontColor: white;
   --bookmarkOffColor: darkgray;
   --bookmarkOnColor: var(--blue);
@@ -127,4 +126,26 @@ a {
 
 p {
   margin: 0;
+}
+
+@media (min-aspect-ratio: 21 / 20) {
+  .app {
+    display: grid;
+    place-content: center;
+  }
+}
+
+.fade_in {
+  animation: fadeInAnimation ease 1.3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
 }
