--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,26 +1,30 @@
 #home {
   display: grid;
   grid-template-rows: fit-content(0) auto;
-  padding: 10px;
 }
 
 .home__grid {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
 .home__grid__item {
   display: grid;
   grid-template-rows: auto fit-content(0);
+  grid-template-columns: 75%;
   justify-content: center;
-  background-color: var(--homeGridBackground);
-  border-radius: 20px;
-  padding: 10px;
-  padding-top: 15px;
+  padding: 10px !important;
+  padding-top: 15px !important;
   box-sizing: border-box;
   box-shadow: var(--homeGridShadow);
+  aspect-ratio: 1 / 1;
+}
+
+.home__grid__item canvas {
+  width: 100%;
 }
 
 .home__grid__item__icon-wrapper {
@@ -44,51 +48,45 @@
   display: flex;
   flex-flow: column;
   justify-content: flex-end;
-  width: 100%;
 }
 
-.home__continue-wrapper__subtitle {
-  color: var(--primaryTextColor);
-  text-align: center;
-  font-size: 18px;
-
-}
-
-.edit-buttons__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  color: var(--editButtonColor);
-  background-color: var(--editButtonBackground);
-}
-
-.edit-buttons__button.highlight {
-  background-color: #4b7bec;
-  color: white;
-}
-
-.edit-buttons__button.yellow {
-  background-color: #fed330;
-  color: white;
-}
-
-.edit-buttons__button:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
-}
-
-.edit-buttons__button__icon {
-  font-size: 35px;
-}
-
-.numpad {
-  grid-area: numpad;
+.home__continue {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  padding: 0 10px;
-  gap: 7px;
+  grid-template-columns: auto fit-content(0) fit-content(0);
+  align-items: center;
+  gap: 5px;
+  padding: 12px !important;
+}
+
+.home__continue__info {
+  color: var(--primaryTextColor);
+  font-size: 20px;
+}
+
+.home__continue__button {
+  color: var(--theme-color);
+  font-size: 20px;
+}
+
+.home__continue__icon {
+  color: var(--theme-color);
+}
+
+@media (min-aspect-ratio: 21 / 20) {
+  #home {
+    width: 400px;
+  }
+}
+
+@media (max-height: 600px) {
+  .home__grid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+  }
+}
+
+@media (max-width: 1000px) {
+  #home {
+    width: 100% !important;
+  }
 }
