--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -1,6 +1,4 @@
 #settings {
-  margin-top: 10px;
-  padding: 0 10px 10px 10px;
   overflow-y: scroll;
 }
 
@@ -16,22 +14,22 @@
 .settings__item {
   display: grid;
   grid-template-columns: auto fit-content(0);
-  padding: 15px 25px;
+  padding: 15px 10px;
   border-width: 1px 1px 0px 1px;
   border-style: solid;
   align-items: center;
-  background-color: var(--settingsItemBackground);
+  background-color: var(--darkBackground);
   border-color: var(--settingsItemBorder);
 }
 
 .settings__item:first-child {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
 
 .settings__item:last-child {
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
   border-width: 1px 1px 1px 1px;
 }
 
@@ -39,10 +37,4 @@
   font-size: 20px;
   margin-right: 40px;
   color: var(--settingsItemTitleColor);
-}
-
-.settings__version {
-  text-align: center;
-  margin-top: 10px;
-  color: var(--primaryTextColor);
 }
