--- a/src/pages/sudoku/sudoku.css
+++ b/src/pages/sudoku/sudoku.css
@@ -9,7 +9,7 @@
 .game {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: fit-content(0) auto;
+  grid-template-rows: auto calc(79vw);
   grid-template-areas:
     "sudoku"
     "numpad";
@@ -21,15 +21,15 @@
 .sudoku {
   grid-area: sudoku;
   display: flex;
-  justify-content: center;
+  flex-flow: column;
+  justify-content: flex-end;
   align-items: center;
 }
 
-.canvas__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.sudoku canvas {
   width: 100%;
+  max-height: calc(100vh - 79vw - 75px);
+  aspect-ratio: 1 / 1;
 }
 
 .sudoku__win-screen-wrapper {
@@ -44,13 +44,17 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   padding: 20px;
 }
 
+.sudoku__win-screen .button {
+  width: 100%;
+}
+
 .sudoku__win-screen__title {
   grid-area: title;
-  text-align: center;
   color: white;
   font-size: 30px;
   color: var(--primaryTextColor);
@@ -63,4 +67,67 @@
 
 .bookmark-on {
   color: var(--bookmarkOnColor);
+}
+
+.numpad-wrapper {
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-end;
+  max-height: calc(100vw - 14px);
+}
+
+@media (min-aspect-ratio: 46/89){
+  /*Tablets*/
+  .game {
+    grid-template-rows: auto 200px;
+  }
+
+  .sudoku canvas {
+    max-width: calc(100vh - 280px);
+    max-height: calc(100vh - 280px);
+  }
+}
+
+/*@media (min-width: 1050px) {*/
+@media (min-aspect-ratio: 2/1) or (min-width: 1050px){
+  /*Desktop and landscape phones*/
+  .game {
+    grid-template-columns: 500px 500px;
+    grid-template-rows: 500px;
+    grid-template-areas: "sudoku numpad";
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    max-height: 500px;
+  }
+
+  .sudoku canvas {
+    height: 500px;
+    max-height: 500px;
+  }
+
+  .numpad-wrapper {
+    height: 500px;
+  }
+
+  .sudoku__win-screen-wrapper {
+    width: 1010px;
+    height: 500px;
+  }
+
+  .sudoku__win-screen .button {
+    max-width: 300px;
+  }
+
+  @media (max-height: 800px) {
+    .game {
+      grid-template-columns: 85vh 80vh;
+      grid-template-rows: 80vh;
+    }
+  
+    .sudoku canvas {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
 }
