--- a/src/components/editButton/editButton.css
+++ b/src/components/editButton/editButton.css
@@ -11,7 +11,7 @@
 }
 
 .edit-buttons__button.highlight {
-  background-color: #4b7bec;
+  background-color: var(--theme-color);
   color: white;
 }
 
