--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 :root {
   --theme-color: #4b7bec;
   --red: #fc5c65;
+  --darkRed: #eb3b5a;
+  --orange: #fd9644;
+  --yellow: #fed330;
   --green: #26de81;
-  --blue: #4b7bec;
+  --blueGreen: #2bcbba;
+  --lightBlue: #45aaf2;
+  --darkBlue: #4b7bec;
+  --purple: #a55eea;
   --lightGray: #dce0e6 /*#e4e7ed*/;
   --darkGrayBlue: #344861;
 }
@@ -12,53 +18,35 @@
   --darkBackground: white;
   --primaryTextColor: var(--darkGrayBlue);
   --secondaryTextColor: #9e9e9e;
-  --loginButtonBorderColor: var(--darkGrayBlue);
   --topbarFontColor: var(--darkGrayBlue);
   --bookmarkOffColor: var(--darkGrayBlue);
-  --bookmarkOnColor: var(--blue);
   --actionSheetButtonBackground: #eeeef0;
   --actionSheetCancelBackground: white;
   --actionSheetButtonBorder: #d8d8db;
-  --editButtonColor: var(--blue);
+  --editButtonColor: var(--theme-color);
   --editButtonBackground: var(--lightGray);
   --numpadButtonBackground: var(--lightGray);
   --disabledButtonBackground: transparent;
   --disabledButtonBorderColor: transparent;
-  --lockedButtonBackgroundColor: var(--blue);
-  --lockedButtonBorderColor: var(--blue);
-  --gameMenuListBackground: white;
-  --gameMenuListBorder: none;
-  --mobile__gameMenuListBorder: white;
-  --menuButtonBorderColor: var(--lightGray);
-  --mobile__menuButtonBorderColor: var(--lightGray);
-  --menuButtonColor: var(--blue);
-  --mobile__menuButtonColor: var(--blue);
-  --gameMenuListShadow: 0 5px 20px 0 rgb(0 0 0 / 20%);
-  --menuButtonHoverColor: var(--blue);
-  --menuButtonHoverBackground: #e4eaf1;
   --settingsItemBackground: white;
   --settingsItemBorder: var(--lightGray);
   --settingsItemColor: var(--darkGrayBlue);
   --cancelButtonBackround: white;
   --cancelButtonFontWeight: regular;
-  --modeSelectorBorderColor: var(--darkGrayBlue);
-  --modeSelectorColor: var(--darkGrayBlue);
-  --modeSelectorSelectedBorderColor: var(--blue);
   --homeGridBackground: var(--darkBackground);
   --homeGridShadow: 0px 0px 10px #aaaaaa;
   --homeGridIconColor: #444444;
   --bookmarksEmptyColor: #444444;
+  --checkIconColor: white;
 }
 
 [data-theme='dark'] {
   --background: black;
   --darkBackground: #1c1c1e;
   --primaryTextColor: white;
-  --secondaryTextColor: #e0e0e0;
-  --loginButtonBorderColor: white;
+  --secondaryTextColor: gray;
   --topbarFontColor: white;
   --bookmarkOffColor: darkgray;
-  --bookmarkOnColor: var(--blue);
   --actionSheetButtonBackground: #1f1e1e;
   --actionSheetCancelBackground: #2c2c2e;
   --actionSheetButtonBorder: #434344;
@@ -67,8 +55,6 @@
   --numpadButtonBackground: var(--darkBackground);
   --disabledButtonBackground: transparent;
   --disabledButtonBorderColor: #25242c;
-  --lockedButtonBackgroundColor: var(--blue);
-  --lockedButtonBorderColor: var(--blue);
   --canvasLightDefaultCellColor: #25242c;
   --canvasDarkDefaultCellColor: #161620;
   --canvasCellBorderColor: black;
@@ -79,28 +65,48 @@
   --canvasSameValueCellBackground: #0f0e12;
   --canvasNoteHighlightColor: white;
   --canvasAnimationBaseColor: 255, 255, 255;
-  --gameMenuListBackground: #25242c;
-  --gameMenuListBorder: solid 1px white;
-  --mobile__gameMenuListBorder: none;
-  --menuButtonBorderColor: white;
-  --mobile__menuButtonBorderColor: var(--darkGrayBlue);
-  --menuButtonColor: #75747c;
-  --mobile__menuButtonColor: var(--blue);
-  --gameMenuListShadow: none;
-  --menuButtonHoverColor: white;
-  --menuButtonHoverBackground: #25242c;
   --settingsItemBackground: #25242c;
   --settingsItemBorder: black;
   --settingsItemTitleColor: white;
   --cancelButtonBackround: #25242c;
   --cancelButtonFontWeight: bold;
-  --modeSelectorBorderColor: white;
-  --modeSelectorColor: white;
-  --modeSelectorSelectedBorderColor: var(--blue);
   --homeGridBackground: var(--darkBackground);
   --homeGridShadow: none;
   --homeGridIconColor: #616161;
   --bookmarksEmptyColor: #616161;
+  --checkIconColor: black;
+}
+
+[data-accent-color='red'] {
+  --theme-color: var(--red);
+}
+
+[data-accent-color='orange'] {
+  --theme-color: var(--orange);
+}
+
+[data-accent-color='yellow'] {
+  --theme-color: var(--yellow);
+}
+
+[data-accent-color='green'] {
+  --theme-color: var(--green);
+}
+
+[data-accent-color='blueGreen'] {
+  --theme-color: var(--blueGreen);
+}
+
+[data-accent-color='lightBlue'] {
+  --theme-color: var(--lightBlue);
+}
+
+[data-accent-color='darkBlue'] {
+  --theme-color: var(--darkBlue);
+}
+
+[data-accent-color='purple'] {
+  --theme-color: var(--purple);
 }
 
 html, body, #root, .app {
