--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -1,40 +1,44 @@
 #settings {
   overflow-y: scroll;
+  padding-top: 30px;
 }
 
 .settings {
   padding-top: 40px;
 }
 
+.settings__label {
+  color: gray;
+  padding-left: 15px;
+  margin-bottom: 5px;
+}
+
 .settings__list {
   display: flex;
   flex-flow: column;
+  margin-bottom: 30px;
 }
 
-.settings__item {
+.settings__section__list {
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+}
+
+.settings__section-link {
   display: grid;
-  grid-template-columns: auto fit-content(0);
-  padding: 15px 10px;
-  border-width: 1px 1px 0px 1px;
-  border-style: solid;
+  grid-template-columns: 30px auto fit-content(0);
+  grid-template-rows: 30px;
   align-items: center;
-  background-color: var(--darkBackground);
-  border-color: var(--settingsItemBorder);
+  gap: 10px;
+  color: var(--primaryTextColor);
 }
 
-.settings__item:first-child {
-  border-top-left-radius: 7px;
-  border-top-right-radius: 7px;
-}
-
-.settings__item:last-child {
-  border-bottom-left-radius: 7px;
-  border-bottom-right-radius: 7px;
-  border-width: 1px 1px 1px 1px;
-}
-
-.settings__item__title {
+.settings__section-link__icon {
+  display: grid;
+  place-items: center;
+  height: 30px;
+  border-radius: 5px;
+  color: white;
   font-size: 20px;
-  margin-right: 40px;
-  color: var(--settingsItemTitleColor);
 }
