Animate entire topbar

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -10,7 +10,7 @@
   display: grid;
   align-items: center;
   width: 100%;
-  /*width: calc(100% - 14px);*/
+  min-height: 37px;
   overflow-x: hidden;
 }
 
