--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,48 +1,93 @@
 #home {
   display: grid;
-  grid-template-rows: fit-content(0) auto;
-  padding-top: 30px;
-}
-
-.home__grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.home__grid__item {
-  display: grid;
   grid-template-rows: auto fit-content(0);
-  grid-template-columns: 75%;
+  padding-top: 30px;
+  align-items: center;
+}
+
+.home__carousel-wrapper {
+  display: flex;
+  flex-flow: column;
+  overflow: hidden;
+  min-height: 300px;
+}
+
+.home__carousel {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: 200px;
+  overflow-x: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.home__carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.home__carousel__item-wrapper:first-child {
+  padding-left: 200px;
+}
+
+.home__carousel__item-wrapper:last-child {
+  padding-right: 200px;
+}
+
+.home__gameMode {
+  scroll-snap-align: center;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   justify-content: center;
-  padding: 10px !important;
-  padding-top: 15px !important;
-  box-sizing: border-box;
-  box-shadow: var(--homeGridShadow);
-  aspect-ratio: 1 / 1;
+  gap: 5px;
+  width: 100px !important;
+  height: 100px;
+  aspect-ratio: 1 / 1 !important;
+  border-radius: 10%;
+  background-color: white;
+  color: black;
+  font-size: 20px;
+  padding: 10px;
+  transition: background-color 0.5s ease, color 0.5s ease, width 0.5s ease, height 0.5s ease;
 }
 
-.home__grid__item canvas {
-  width: 100%;
+.home__gameMode canvas {
+  width: 70px;
+  border: solid 1px black;
+  border-radius: 8%;
+  transition: width 0.5s ease;
 }
 
-.home__grid__item__icon-wrapper {
-  display: grid;
-  place-items: center;
+.home__gameMode.snapped {
+  width: 150px !important;
+  height: 150px;
+  background-color: var(--theme-color);
+  color: white;
 }
 
-.home__grid__item__icon-wrapper__icon {
-  font-size: 60px;
-  color: var(--homeGridIconColor);
+.home__gameMode.snapped canvas {
+  width: 120px;
 }
 
-.home__grid__item__title {
-  color: var(--primaryTextColor);
-  text-align: center;
-  font-size: 18px;
-  margin-top: 5px;
+.home__carousel-dots {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  gap: 10px;
+}
+
+.home__carousel-dots__dot {
+  height: 5px;
+  width: 15px;
+  background-color: gray;
+  border-radius: 2.5px;
+  transition: background-color 0.5s ease, width 0.5s ease;
+}
+
+.home__carousel-dots__dot.selected {
+  width: 25px;
+  background-color: var(--theme-color);
 }
 
 .home__continue-wrapper {
@@ -71,12 +116,6 @@
 
 .home__continue__icon {
   color: var(--theme-color);
-}
-
-@media (min-aspect-ratio: 21 / 20) {
-  #home {
-    width: 400px;
-  }
 }
 
 @media (max-height: 600px) {
