--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --theme-color: #4b7bec;
+  --theme-color: #2e69f2;
   --red: #fc5c65;
   --darkRed: #eb3b5a;
   --orange: #fd9644;
@@ -7,22 +7,26 @@
   --green: #26de81;
   --blueGreen: #2bcbba;
   --lightBlue: #45aaf2;
-  --darkBlue: #4b7bec;
+  --darkBlue: #2e69f2;
   --purple: #a55eea;
   --lightGray: #dce0e6 /*#e4e7ed*/;
   --darkGrayBlue: #344861;
 }
 
 [data-theme='light'] {
-  --background: #f2f1f6;
+  --background: #e9e9e9;
   --darkBackground: white;
-  --primaryTextColor: var(--darkGrayBlue);
+  --primaryTextColor: black;
   --secondaryTextColor: #9e9e9e;
+  --primaryIconColor: black;
+  --secondaryIconColor: #848484;
   --topbarFontColor: var(--darkGrayBlue);
   --bookmarkOffColor: var(--darkGrayBlue);
-  --actionSheetButtonBackground: #eeeef0;
+  --actionSheetBackground: #eeeef0;
   --actionSheetCancelBackground: white;
   --actionSheetButtonBorder: #d8d8db;
+  --contextMenuButtonColor: #505050;
+  --contextMenuButtonBackground: #e7e7e7;
   --editButtonColor: var(--theme-color);
   --editButtonBackground: var(--lightGray);
   --numpadButtonBackground: var(--lightGray);
@@ -33,11 +37,13 @@
   --settingsItemColor: var(--darkGrayBlue);
   --cancelButtonBackround: white;
   --cancelButtonFontWeight: regular;
-  --homeGridBackground: var(--darkBackground);
-  --homeGridShadow: 5px 5px 5px #aaaaaa;
-  --homeGridIconColor: #444444;
   --bookmarksEmptyColor: #444444;
   --checkIconColor: white;
+  --tabSwitcherBackground: white;
+  --tabSwitcherIconColor: #c7c7c7;
+  --tabSwitcherSelectedTabIconColor: white;
+  --tabSwitcherSelectedTabBackground: black;
+  --carouselDotColor: #c8c8c8;
 }
 
 [data-theme='dark'] {
@@ -45,11 +51,15 @@
   --darkBackground: #1c1c1e;
   --primaryTextColor: white;
   --secondaryTextColor: gray;
+  --primaryIconColor: white;
+  --secondaryIconColor: #848484;
   --topbarFontColor: white;
   --bookmarkOffColor: darkgray;
-  --actionSheetButtonBackground: #1f1e1e;
+  --actionSheetBackground: #1f1e1e;
   --actionSheetCancelBackground: #2c2c2e;
   --actionSheetButtonBorder: #434344;
+  --contextMenuButtonColor: #959595;
+  --contextMenuButtonBackground: #2b2b2b;
   --editButtonColor: #75747c;
   --editButtonBackground: var(--darkBackground);
   --numpadButtonBackground: var(--darkBackground);
@@ -70,11 +80,13 @@
   --settingsItemTitleColor: white;
   --cancelButtonBackround: #25242c;
   --cancelButtonFontWeight: bold;
-  --homeGridBackground: var(--darkBackground);
-  --homeGridShadow: none;
-  --homeGridIconColor: #616161;
   --bookmarksEmptyColor: #616161;
   --checkIconColor: black;
+  --tabSwitcherBackground: #343434;
+  --tabSwitcherIconColor: #dfdfdf;
+  --tabSwitcherSelectedTabIconColor: black;
+  --tabSwitcherSelectedTabBackground: white;
+  --carouselDotColor: #949494;
 }
 
 [data-accent-color='red'] {
@@ -116,6 +128,8 @@ html, body, #root, .app {
   font-family: sans-serif;
   user-select: none;
   touch-action: manipulation;
+  scroll-behavior: smooth;
+  font-family: 'Inter';
 }
 
 .app {
@@ -132,6 +146,7 @@ a {
 
 p {
   margin: 0;
+  line-height: 16px;
 }
 
 @media (min-aspect-ratio: 21 / 20) {
