--- a/src/components/numpad/numpad.css
+++ b/src/components/numpad/numpad.css
@@ -27,7 +27,9 @@
 }
 
 .edit-buttons__button .icon, .special-buttons__button .icon {
-  width: 50% !important;
+  width: 100%;
+  max-width: 50% !important;
+  max-height: 50% !important;
 }
 
 .numpad__rows-wrapper {
