--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -24,16 +24,41 @@
 .settings__section__list {
   display: flex;
   flex-flow: column;
-  gap: 20px;
+  /*gap: 20px;*/
 }
 
 .settings__section-link {
   display: grid;
-  grid-template-columns: 30px auto fit-content(0);
-  grid-template-rows: 30px;
+  grid-template-columns: 30px auto;
   align-items: center;
   gap: 10px;
+  background-color: var(--darkBackground);
   color: var(--primaryTextColor);
+  padding-left: 10px;
+}
+
+.settings__section-link:first-child {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.settings__section-link:last-child {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.settings__section-link__right-wrapper {
+  display: grid;
+  grid-template-columns: auto fit-content(0);
+  align-items: center;
+  border-bottom: solid 1px var(--settingsBorderColor);
+  padding-right: 10px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+
+.settings__section-link:last-child > .settings__section-link__right-wrapper {
+  border: none;
 }
 
 .settings__section-link__icon {
