--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -57,7 +57,7 @@
   padding-bottom: 14px;
 }
 
-.settings__section-link:last-child > .settings__section-link__right-wrapper {
+.settings__section-link:last-child>.settings__section-link__right-wrapper {
   border: none;
 }
 
@@ -68,6 +68,10 @@
   border-radius: 5px;
   color: white;
   font-size: 20px;
+}
+
+.about__flag-argentina {
+  height: 20px;
 }
 
 @media (min-aspect-ratio: 21 / 20) {
