--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,7 +1,7 @@
 .button {
   display: grid;
   place-items: center;
-  padding: 7px 0;
+  padding: 7px;
   border-radius: 7px;
   font-size: 22px;
 }
