--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -62,7 +62,7 @@
 .topbar__button {
   display: grid;
   place-items: center;
-  color: var(--theme-color);
+  color: var(--themeColor);
   font-size: 20px;
   margin-right: 10px;
   white-space: nowrap;
