--- a/src/pages/sudoku/sudoku.css
+++ b/src/pages/sudoku/sudoku.css
@@ -35,10 +35,15 @@
   padding: 5px;
   border-radius: 5px;
   font-variant-numeric: tabular-nums;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  transition: background-color 0.5s ease, color 0.5s ease, width 0.5s ease;
 }
 
 .sudoku__timer__time {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.sudoku__timer__message {
   font-weight: 500;
   font-size: 16px;
 }
