--- a/src/pages/home/bookmarks/bookmarks.css
+++ b/src/pages/home/bookmarks/bookmarks.css
@@ -16,19 +16,20 @@
 	display: flex;
 	flex-flow: column;
 	background-color: var(--homeGridBackground);
-	padding: 10px;
+	padding: 15px;
 	border-radius: 20px;
 }
 
 .bookmarks_item__top {
-	display: grid;
-	grid-template-columns: auto fit-content(0) fit-content(0);
+	display: flex;
+	flex-flow: row;
 	gap: 10px;
 	margin-bottom: 10px;
 	font-size: 20px;
 }
 
 .bookmarks__item__top__title {
+	flex-grow: 1;
 	color: var(--primaryTextColor);
 }
 
