--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -14,8 +14,15 @@
   padding: 5px 15px;
 }
 
+.home__section__title-wrapper {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  padding: 0 15px;
+}
+
 .home__section-title {
-  padding-left: 15px;
+  flex-grow: 1;
   color: var(--primaryTextColor);
   font-size: 28px;
   font-weight: 600;
