--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@
   --tabSwitcherSelectedTabBackground: black;
   --carouselDotColor: #c8c8c8;
   --settingsBorderColor: #dddddd;
+  --canvasBoxBorderColor: #344861;
 }
 
 [data-theme='dark'] {
@@ -68,16 +69,6 @@
   --numpadButtonBackground: var(--darkBackground);
   --disabledButtonBackground: transparent;
   --disabledButtonBorderColor: #25242c;
-  --canvasLightDefaultCellColor: #25242c;
-  --canvasDarkDefaultCellColor: #161620;
-  --canvasCellBorderColor: black;
-  --canvasBoxBorderColor: black;
-  --canvasClueColor: #75747c;
-  --canvasSolutionColor: #6f90c3;
-  --canvasSelectedCellBackground: #153b79;
-  --canvasSameValueCellBackground: #0f0e12;
-  --canvasNoteHighlightColor: white;
-  --canvasAnimationBaseColor: 255, 255, 255;
   --settingsItemBackground: #25242c;
   --settingsItemBorder: black;
   --settingsItemTitleColor: white;
@@ -91,6 +82,7 @@
   --tabSwitcherSelectedTabBackground: white;
   --carouselDotColor: #949494;
   --settingsBorderColor: #333333;
+  --canvasBoxBorderColor: black;
 }
 
 [data-accent-color='red'] {
@@ -134,6 +126,7 @@ html, body, #root, .app {
   touch-action: manipulation;
   scroll-behavior: smooth;
   font-family: 'Inter';
+  font-size: 14px;
 }
 
 .app {
