--- a/src/pages/sudoku/sudoku.css
+++ b/src/pages/sudoku/sudoku.css
@@ -16,6 +16,7 @@
   gap: 10px;
   width: 100%;
   height: 100%;
+  padding-top: 5px;
 }
 
 .sudoku {
@@ -24,6 +25,17 @@
   flex-flow: column;
   justify-content: flex-end;
   align-items: center;
+}
+
+.play__canvas-wrapper {
+  display: grid;
+	place-items: center;
+  padding: 1%;
+  background-color: var(--canvasBoxBorderColor);
+
+  .sudoku-canvas {
+    border-radius: 0px !important;
+  }
 }
 
 .sudoku__timer {
@@ -48,7 +60,16 @@
   font-size: 16px;
 }
 
+.sudoku-canvas-wrapper {
+  display: grid;
+	place-items: center;
+  padding: 1%;
+  border-radius: 6%;
+  background-color: var(--canvasBoxBorderColor);
+}
+
 .sudoku-canvas {
+  border-radius: 5%;
   width: 100%;
   max-height: calc(100vh - 79vw - 75px);
   aspect-ratio: 1 / 1;
